:sparkles: pointed all read http handlers to grpc handler
